[package]

name = "tungsten"
version = "0.1.0"
description = "..."
readme = "README.md"
repository = "https://github.com/troposphere/tungsten"
license = "MIT"
authors = [
    "Sankha Narayan Guria <sankha93@gmail.com>",
    "Aseem Raj Baranwal <aseemraj@protonmail.com>"
]

[dependencies]

hyper = "0.9"
url = "1.1.1"
